--- a/rpath/CMakeLists.txt
+++ b/rpath/CMakeLists.txt
@@ -6,5 +6,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS true)
 
 add_subdirectory (libhello)
 
-add_executable (hello main.cpp )
-target_link_libraries(hello libhello)
+add_executable (main main.cpp )
+target_link_libraries(main hello)
+
+include_directories(main libhello)
