--- a/rpath/libhello/CMakeLists.txt
+++ b/rpath/libhello/CMakeLists.txt
@@ -1,5 +1,6 @@
 
 set(CMAKE_SHARED_LINKER_FLAGS "-Wl,-rpath=toto")
 
-add_library (libhello SHARED hello.c hello.h)
-target_include_directories(libhello PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+add_library (hello SHARED hello.cpp hello.h)
+
+#target_include_directories(hello PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
