--- a/rpath/makefile
+++ b/rpath/makefile
@@ -1,6 +1,12 @@
 
 compile:
-	cd build && make && readelf -a libhello/liblibhello.so | grep PATH
+	cd build && make VERBOSE=1 && ./main
+
+check:
+	readelf -a build/libhello/libhello.so | grep PATH
 
 config:
 	mkdir -p build && cd build && cmake ..
+
+clean:
+	rm -r build
