[gcc tree] add embedded C in temporary ASM code

--- a/gcc-tree/makefile
+++ b/gcc-tree/makefile
@@ -1,1 +1,13 @@
-CXXFLAGS=-fsanitize=address -g -fdump-ipa-all-details -fdump-tree-all-details -fdump-rtl-all-details -O3
+CXXFLAGS=-g
+
+# keep ASM with embedded C code
+CXXFLAGS+= -save-temps -fverbose-asm
+
+# keep all gcc step
+CXXFLAGS+= -fdump-ipa-all-details -fdump-tree-all-details -fdump-rtl-all-details -O3
+
+all: clean
+	make main
+
+clean:
+	-rm main main.o
